--- a/p8105_hw5_xl2834.rmd
+++ b/p8105_hw5_xl2834.rmd
@@ -7,6 +7,7 @@ output: github_document
 
 ```{r setup, include=FALSE}
 library(tidyverse)
+library(readxl)
 library(ggridges)
 library(p8105.datasets)
 
@@ -29,3 +30,46 @@ scale_fill_discrete = scale_fill_viridis_d
 ```
 
 ## Problem 1
+
+```{r}
+file_path = 
+  list.files(path = "./data/hw5_data/data", full.names = TRUE)
+
+
+
+read_data = function(x) {
+  
+  
+  
+  study_df = read_csv(x) %>% 
+             mutate(arm_id = str_sub(x, start = -10, end = -5))
+  
+  
+  study_df
+  
+  
+}
+
+output = vector("list", length = 10)
+
+for (i in 1:10) {
+  output[[i]] = read_data(file_path[[i]])
+}
+
+```
+
+
+use map
+
+```{r}
+output = map(file_path, read_data)
+
+study_result = 
+  bind_rows(output) %>% 
+  separate(arm_id, into = c("arm","id"), sep = "_") %>% 
+  pivot_longer(
+    week_1:week_8,
+    names_to = "week",
+    values_to = "observation") %>% 
+  mutate(week = str_sub(week, -1))
+```
