--- a/p8105_hw5_xl2834.md
+++ b/p8105_hw5_xl2834.md
@@ -13,15 +13,10 @@ file_path =
 
 read_data = function(x) {
   
-  
-  
   study_df = read_csv(x) %>% 
              mutate(arm_id = str_sub(x, start = -10, end = -5))
   
-  
   study_df
-  
-  
 }
 
 output = vector("list", length = 10)
@@ -379,3 +374,12 @@ study_result =
     values_to = "observation") %>% 
   mutate(week = str_sub(week, -1))
 ```
+
+``` r
+study_result %>% 
+  ggplot(aes(x = week, y = observation, group = id, color = arm)) + 
+  geom_line() +
+  facet_grid(. ~ arm)
+```
+
+<img src="p8105_hw5_xl2834_files/figure-gfm/unnamed-chunk-3-1.png" width="90%" />
