--- a/p8105_hw5_xl2834.md
+++ b/p8105_hw5_xl2834.md
@@ -383,3 +383,48 @@ study_result %>%
 ```
 
 <img src="p8105_hw5_xl2834_files/figure-gfm/unnamed-chunk-3-1.png" width="90%" />
+
+# Problem 2
+
+``` r
+sim_mean_sd = function(n = 30, mu = 0, sigma = 5) {
+  
+  sim_data = tibble(
+    x = rnorm(n, mean = mu, sd = sigma),
+  )
+  
+  sim_data %>% 
+    summarize(
+      mu_hat = mean(x),
+      p_value = broom::tidy(t.test(x, mu = 0))$p.value
+    )
+}
+
+
+sim_results = 
+  rerun(50, sim_mean_sd(30, 0, 5)) %>% 
+  bind_rows()
+```
+
+``` r
+sim = tibble(
+    x = rnorm(n = 30, mean = 0, sd = 5),
+  )
+
+sim %>% 
+    summarize(
+      mu_hat = mean(x),
+      sigma_hat = sd(x)
+    )
+```
+
+    ## # A tibble: 1 x 2
+    ##   mu_hat sigma_hat
+    ##    <dbl>     <dbl>
+    ## 1  0.278      5.09
+
+``` r
+broom::tidy(t.test(rnorm(n = 30, mean = 0, sd = 5), mu = 0))$p.value
+```
+
+    ## [1] 0.5888555
