P2: got a dataframe containing simulation result by mapping and unnesting

--- a/p8105_hw5_xl2834.md
+++ b/p8105_hw5_xl2834.md
@@ -387,7 +387,7 @@ study_result %>%
 # Problem 2
 
 ``` r
-sim_mean_sd = function(n = 30, mu = 0, sigma = 5) {
+sim_mean_p = function(n = 30, mu = 0, sigma = 5) {
   
   sim_data = tibble(
     x = rnorm(n, mean = mu, sd = sigma),
@@ -402,9 +402,49 @@ sim_mean_sd = function(n = 30, mu = 0, sigma = 5) {
 
 
 sim_results = 
-  rerun(50, sim_mean_sd(30, 0, 5)) %>% 
+  rerun(50, sim_mean_p(30, 0, 5)) %>% 
   bind_rows()
 ```
+
+Repeat for mu = 1 to 6
+
+``` r
+mu_list = 
+  list(
+    "mu_1"  = 1, 
+    "mu_2"  = 2, 
+    "mu_3" = 3, 
+    "mu_4" = 4,
+    "mu_5" = 5,
+    "mu_6" = 6
+    )
+
+output = vector("list", length = 6)
+
+for (i in 1:6) {
+  output[[i]] = rerun(50, sim_mean_p(mu = mu_list[[i]])) %>% 
+    bind_rows
+}
+```
+
+Build a dataset
+
+``` r
+result_df =
+  tibble(
+  mu = c(1, 2, 3, 4, 5, 6)
+) %>% 
+  mutate(
+    output_lists = map(.x = mu, ~ rerun(50, sim_mean_p(mu = .x))),
+    estimate_df = map(output_lists, bind_rows)
+  ) %>% 
+  select(-output_lists) %>% 
+  unnest(estimate_df)
+```
+
+Make a plot showing the proportion of times the null was rejected (the
+power of the test) on the y axis and the true value of μ on the x axis.
+Describe the association between effect size and power.
 
 ``` r
 sim = tibble(
@@ -421,10 +461,10 @@ sim %>%
     ## # A tibble: 1 x 2
     ##   mu_hat sigma_hat
     ##    <dbl>     <dbl>
-    ## 1  0.278      5.09
+    ## 1  0.223      4.41
 
 ``` r
 broom::tidy(t.test(rnorm(n = 30, mean = 0, sd = 5), mu = 0))$p.value
 ```
 
-    ## [1] 0.5888555
+    ## [1] 0.6759117
