added P1 and revised P2 and P3

--- a/p8105_hw5_xl2834.md
+++ b/p8105_hw5_xl2834.md
@@ -6,6 +6,92 @@ Xiaoyu Li
 ## Problem 1
 
 ``` r
+homicide_df = 
+  read_csv("./data/homicide-data.csv") %>% 
+  mutate(
+    city_state = str_c(city, state, sep = "_"),
+    resolved = case_when(
+      disposition == "Closed without arrest" ~ "unsolved",
+      disposition == "Open/No arrest"        ~ "unsolved",
+      disposition == "Closed by arrest"      ~ "solved",
+    )
+  ) %>% 
+  select(city_state, resolved) %>% 
+  filter(city_state != "Tulsa_AL")
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   uid = col_character(),
+    ##   reported_date = col_double(),
+    ##   victim_last = col_character(),
+    ##   victim_first = col_character(),
+    ##   victim_race = col_character(),
+    ##   victim_age = col_character(),
+    ##   victim_sex = col_character(),
+    ##   city = col_character(),
+    ##   state = col_character(),
+    ##   lat = col_double(),
+    ##   lon = col_double(),
+    ##   disposition = col_character()
+    ## )
+
+Let’s look at this a bit
+
+``` r
+aggregate_df = 
+  homicide_df %>% 
+  group_by(city_state) %>% 
+  summarize(
+    hom_total = n(),
+    hom_unsolved = sum(resolved == "unsolved")
+  )
+```
+
+    ## `summarise()` ungrouping output (override with `.groups` argument)
+
+Can I do a prop test for a single city?
+
+``` r
+prop.test(
+  aggregate_df %>% filter(city_state == "Baltimore_MD") %>% pull(hom_unsolved), 
+  aggregate_df %>% filter(city_state == "Baltimore_MD") %>% pull(hom_total)) %>% 
+  broom::tidy()
+```
+
+    ## # A tibble: 1 x 8
+    ##   estimate statistic  p.value parameter conf.low conf.high method    alternative
+    ##      <dbl>     <dbl>    <dbl>     <int>    <dbl>     <dbl> <chr>     <chr>      
+    ## 1    0.646      239. 6.46e-54         1    0.628     0.663 1-sample~ two.sided
+
+Try to iterate ……..
+
+``` r
+results_df = 
+  aggregate_df %>% 
+  mutate(
+    prop_tests = map2(.x = hom_unsolved, .y = hom_total, ~prop.test(x = .x, n = .y)),
+    tidy_tests = map(.x = prop_tests, ~broom::tidy(.x))
+  ) %>% 
+  select(-prop_tests) %>% 
+  unnest(tidy_tests) %>% 
+  select(city_state, estimate, conf.low, conf.high)
+```
+
+``` r
+results_df %>% 
+  mutate(city_state = fct_reorder(city_state, estimate)) %>% 
+  ggplot(aes(x = city_state, y = estimate)) +
+  geom_point() + 
+  geom_errorbar(aes(ymin = conf.low, ymax = conf.high)) + 
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
+```
+
+<img src="p8105_hw5_xl2834_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
+
+## Problem 2
+
+``` r
 file_path = 
   list.files(path = "./data/hw5_data/data", full.names = TRUE)
 
@@ -19,10 +105,10 @@ read_data = function(x) {
   study_df
 }
 
-output = vector("list", length = 10)
+output_1 = vector("list", length = 10)
 
 for (i in 1:10) {
-  output[[i]] = read_data(file_path[[i]])
+  output_1[[i]] = read_data(file_path[[i]])
 }
 ```
 
@@ -140,7 +226,7 @@ for (i in 1:10) {
 use map
 
 ``` r
-output = map(file_path, read_data)
+output_1 = map(file_path, read_data)
 ```
 
     ## Parsed with column specification:
@@ -366,7 +452,7 @@ output = map(file_path, read_data)
 
 ``` r
 study_result = 
-  bind_rows(output) %>% 
+  bind_rows(output_1) %>% 
   separate(arm_id, into = c("arm","id"), sep = "_") %>% 
   pivot_longer(
     week_1:week_8,
@@ -382,9 +468,13 @@ study_result %>%
   facet_grid(. ~ arm)
 ```
 
-<img src="p8105_hw5_xl2834_files/figure-gfm/unnamed-chunk-3-1.png" width="90%" />
+<img src="p8105_hw5_xl2834_files/figure-gfm/unnamed-chunk-8-1.png" width="90%" />
 
-# Problem 2
+In the control group, the observation value did not change much across
+weeks. In the experiment group, the observation values increase over the
+weeks.
+
+# Problem 3
 
 ``` r
 sim_mean_p = function(n = 30, mu = 0, sigma = 5) {
@@ -402,27 +492,28 @@ sim_mean_p = function(n = 30, mu = 0, sigma = 5) {
 
 
 sim_results = 
-  rerun(50, sim_mean_p(30, 0, 5)) %>% 
+  rerun(5000, sim_mean_p(30, 0, 5)) %>% 
   bind_rows()
 ```
 
-Repeat for mu = 1 to 6
+Repeat for mu = 0 to 6
 
 ``` r
 mu_list = 
   list(
-    "mu_1"  = 1, 
-    "mu_2"  = 2, 
-    "mu_3" = 3, 
-    "mu_4" = 4,
-    "mu_5" = 5,
-    "mu_6" = 6
+    "mu_1" = 0,
+    "mu_2" = 1, 
+    "mu_3" = 2, 
+    "mu_4" = 3, 
+    "mu_5" = 4,
+    "mu_6" = 5,
+    "mu_7" = 6
     )
 
-output = vector("list", length = 6)
+output = vector("list", length = 7)
 
-for (i in 1:6) {
-  output[[i]] = rerun(50, sim_mean_p(mu = mu_list[[i]])) %>% 
+for (i in 1:7) {
+  output[[i]] = rerun(5000, sim_mean_p(mu = mu_list[[i]])) %>% 
     bind_rows
 }
 ```
@@ -432,10 +523,10 @@ Build a dataset
 ``` r
 result_df =
   tibble(
-  mu = c(1, 2, 3, 4, 5, 6)
+  mu = c(0, 1, 2, 3, 4, 5, 6)
 ) %>% 
   mutate(
-    output_lists = map(.x = mu, ~ rerun(50, sim_mean_p(mu = .x))),
+    output_lists = map(.x = mu, ~ rerun(5000, sim_mean_p(mu = .x))),
     estimate_df = map(output_lists, bind_rows)
   ) %>% 
   select(-output_lists) %>% 
@@ -460,7 +551,7 @@ reject_df =
   summarize(
     reject_total = sum(reject_null == "rejected")
   ) %>% 
-  mutate(reject_proportion = reject_total / 50)
+  mutate(reject_proportion = reject_total / 5000)
 ```
 
     ## `summarise()` ungrouping output (override with `.groups` argument)
@@ -468,11 +559,10 @@ reject_df =
 ``` r
 reject_df %>% 
   ggplot(aes(x = mu, y = reject_proportion)) +
-  geom_point() +
-  scale_x_discrete(limits = c("1","2","3","4","5","6"))
+  geom_point() 
 ```
 
-<img src="p8105_hw5_xl2834_files/figure-gfm/unnamed-chunk-7-1.png" width="90%" />
+<img src="p8105_hw5_xl2834_files/figure-gfm/unnamed-chunk-12-1.png" width="90%" />
 
 The higher the mu value, the higher the proporiton of times that null is
 rejected. This indicates that a larger effect size can lead to higher
@@ -488,7 +578,7 @@ plot_2 =
   summarize(avg_mu_hat = mean(mu_hat)) %>% 
   ggplot(aes(x = mu, y = avg_mu_hat)) +
   geom_point() +
-  scale_x_discrete(limits = c("1","2","3","4","5","6")) +
+  
   labs(
     title = "mean mu hat in groups with different mu")
 ```
@@ -513,7 +603,6 @@ plot_3 =
   summarize(mean_mu_hat = mean(mu_hat)) %>% 
   ggplot(aes(x = mu, y = mean_mu_hat)) +
   geom_point() +
-  scale_x_discrete(limits = c("1","2","3","4","5","6")) +
   labs(
     title = "mean mu hat in samples where null was rejected")
 ```
@@ -524,4 +613,15 @@ plot_3 =
 plot_2 + plot_3
 ```
 
-<img src="p8105_hw5_xl2834_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
+<img src="p8105_hw5_xl2834_files/figure-gfm/unnamed-chunk-15-1.png" width="90%" />
+
+With the increase of μ, the effect size increases, and power increases.
+The sample average of μ hat across tests for which the null is rejected
+approximately equal to the true value of μ when μ = 0, 4, 5, 6, and is
+not approximately equal when μ = 1, 2, 3. When μ = 0, the sample with
+rejected null lie in both tails of the distribution (both positive side
+and negative side), so the average of the sample is close to 0. When μ =
+1, 2, 3, the sample with rejected null lie primarily in the upper tail,
+so the average is larger than the true value of μ. When μ = 4,5,6,
+almost all samples have rejected null, so the average is close to true
+value of μ.
